--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "forms_teacher",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mlamina.github.io/forms-teacher",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -13,6 +14,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -37,6 +40,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-slider": "^1.3.1"
+    "@types/react-slider": "^1.3.1",
+    "gh-pages": "^4.0.0"
   }
 }
